--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/fybwid/simple-nodejs-hbu/issues"
   },
-  "homepage": "https://github.com/fybwid/simple-nodejs-hbu#readme"
+  "homepage": "https://github.com/fybwid/simple-nodejs-hbu#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4"
+  }
 }
